--- a/components/AaronBanner/AaronBanner.module.css
+++ b/components/AaronBanner/AaronBanner.module.css
@@ -15,7 +15,7 @@
     text-align: right;
 }
 
-button {
+.button {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 4px;
@@ -26,6 +26,6 @@ button {
     transition: background-color 0.2s ease;
 }
 
-button:hover {
+.button:hover {
     background-color: #005ab4;
 }
