trying something out with the banner let's see what happens

--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -1,4 +1,4 @@
-.aaron-banner {
+.aaronbanner {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,11 +6,11 @@
     background-color: green;
 }
 
-.left-column {
+.leftcolumn {
     flex-basis: 50%;
 }
 
-.right-column {
+.rightcolumn {
     flex-basis: 50%;
     text-align: right;
 }
