--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -1,6 +1,6 @@
 .hero {
   background-color: #f5f5f5;
-  padding: 40px 0;
+  padding: 100px 0;
 
   .row {
     display: flex;
@@ -42,6 +42,7 @@
         color: #333;
         border: none;
         cursor: pointer;
+        width:50%;
 
         &:hover {
           background-color: #333;
