putting the banner inside a container div

--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -6,11 +6,11 @@
     background-color: green;
 }
 
-.leftcolumn {
+.left-column {
     flex-basis: 50%;
 }
 
-.rightcolumn {
+.right-column {
     flex-basis: 50%;
     text-align: right;
 }
