--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -1,4 +1,4 @@
-.aaronbanner {
+.aaronBanner { // Updated to camelCase
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,11 +6,11 @@
     background-color: green;
 }
 
-.left-column {
+.leftColumn { // Updated to camelCase
     flex-basis: 50%;
 }
 
-.right-column {
+.rightColumn { // Updated to camelCase
     flex-basis: 50%;
     text-align: right;
 }
