--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -1,31 +1,34 @@
-.aaronBanner { // Updated to camelCase
+.aaronBanner {
     display: flex;
-    justify-content: space-between;
+    justify-content: center; // Changed to center
     align-items: center;
     padding: 1rem;
     background-color: green;
 }
 
-.leftColumn { // Updated to camelCase
+.leftColumn {
     flex-basis: 50%;
+    color: #fff; // Changed text color to white
+    text-align: center; // Added to center the text
 }
 
-.rightColumn { // Updated to camelCase
+.rightColumn {
     flex-basis: 50%;
-    text-align: right;
+    text-align: center; // Changed to center
 }
 
 .button {
     padding: 0.5rem 1rem;
+    margin-left: 1rem; // Added to create a little space between text and button
     border: none;
     border-radius: 4px;
-    background-color: #0074d9;
-    color: #fff;
+    background-color: #fff; // Changed to white
+    color: #000; // Changed to black
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
 
 .button:hover {
-    background-color: #005ab4;
+    background-color: #ccc; // Changed to a lighter shade of gray for hover effect
 }
