--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -1,34 +1,36 @@
 .aaronBanner {
     display: flex;
-    justify-content: center; // Changed to center
+    justify-content: center;
     align-items: center;
     padding: 1rem;
     background-color: green;
 }
 
 .leftColumn {
+    display: flex; // Added
+    justify-content: flex-end; // Added
     flex-basis: 50%;
-    color: #fff; // Changed text color to white
-    text-align: center; // Added to center the text
+    color: #fff;
 }
 
 .rightColumn {
+    display: flex; // Added
+    justify-content: flex-start; // Added
     flex-basis: 50%;
-    text-align: center; // Changed to center
 }
 
 .button {
-    padding: 0.5rem 1rem;
-    margin-left: 1rem; // Added to create a little space between text and button
+    padding: 1rem 2rem;
+    margin-left: 1rem; // To create a little space between text and button
     border: none;
     border-radius: 4px;
-    background-color: #fff; // Changed to white
-    color: #000; // Changed to black
-    font-size: 1rem;
+    background-color: #fff;
+    color: #000;
+    font-size: 2rem;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
 
 .button:hover {
-    background-color: #ccc; // Changed to a lighter shade of gray for hover effect
+    background-color: #ccc;
 }
