--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -11,19 +11,19 @@
     justify-content: flex-end; // Added
     flex-basis: 50%;
     color: #fff;
-    align-items:center;
+    padding:1rem;
 }
 
 .rightColumn {
     display: flex; // Added
     justify-content: flex-start; // Added
     flex-basis: 50%;
-    align-items:center;
+    padding:1rem;
 }
 
 .button {
     padding: 1rem 2rem;
-    margin-left: .5rem; // To create a little space between text and button
+    margin-left: 1rem; // To create a little space between text and button
     border: none;
     border-radius: 4px;
     background-color: #fff;
