--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -2,33 +2,38 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: .5rem;
+    height: 52px;
+    padding: 0 1rem;
     background-color: green;
 }
 
 .leftColumn {
-    display: flex; // Added
-    justify-content: flex-end; // Added
+    display: flex;
+    justify-content: flex-end;
     flex-basis: 50%;
     color: #fff;
-    padding:1rem;
+    line-height: 52px;
 }
 
 .rightColumn {
-    display: flex; // Added
-    justify-content: flex-start; // Added
+    display: flex;
+    justify-content: flex-start;
     flex-basis: 50%;
-    padding:1rem;
 }
 
 .button {
-    padding: 1rem 2rem;
-    margin-left: 1rem; // To create a little space between text and button
+    width: 155px; // Set button width to 155 pixels
+    height: 32px; // Set button height to 32 pixels
+    display: flex; // Added for aligning text inside the button
+    align-items: center; // Align text vertically inside the button
+    justify-content: center; // Align text horizontally inside the button
+    padding: 0.5rem 1rem;
+    margin-left: 1rem;
     border: none;
     border-radius: 4px;
     background-color: #fff;
     color: #000;
-    font-size: 1.2rem;
+    font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
