--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     height: 52px;
-    padding: 0 1rem;
-    background-color: #25a45c;
+    padding: 10px 1rem; // Add 10px padding on top and bottom
+    background-color: green;
     position: sticky;
     top: 0;
     z-index: 1000;
