--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     height: 52px;
     padding: 20px 1rem; // Add 10px padding on top and bottom
-    background-color: green;
+    background-color: #25a45c;
     position: sticky;
     top: 0;
     z-index: 1000;
