--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -16,6 +16,7 @@
     flex-basis: 50%;
     color: #fff;
     line-height: 1.6; // Adjust the line-height
+    padding-top: 10px;
 }
 
 .rightColumn {
