--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
   }
 
-  .col {
+  .left-col {
     flex: 1;
     padding: 0 20px;
     width: 50%;
@@ -16,6 +16,12 @@
       max-width: 100%;
       height: auto;
     }
+  }
+
+  .right-col {
+    flex: 1;
+    padding: 0 20px;
+    width: 50%;
   }
 
   .content {
@@ -43,7 +49,7 @@
         color: #333;
         border: none;
         cursor: pointer;
-        width:50%;
+        width: 50%;
 
         &:hover {
           background-color: #333;
