--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -7,19 +7,17 @@
     flex-wrap: wrap;
   }
 
-  .left-col {
+  .col {
     flex: 1;
     padding: 0 20px;
-
-    .image {
-      max-width: 100%;
-      height: auto;
-    }
+    width: 50%;
   }
 
-  .right-col {
-    flex: 1;
-    padding: 0 20px;
+  .leftCol .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
   }
 
   .content {
