--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -13,11 +13,11 @@
     width: 50%;
   }
 
-  .leftCol .image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+  .leftCol {
+    background-image: url("https://bpheadlesst596.wpengine.com/wp-content/uploads/2023/04/phones-app-transparent-large.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .content {
