--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -2,22 +2,28 @@
   background-color: #e5eaf4;
   padding: 100px 0;
 
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
   .row {
     display: flex;
     flex-wrap: wrap;
   }
 
-  .col {
+  .leftCol,
+  .rightCol {
     flex: 1;
     padding: 0 20px;
     width: 50%;
   }
 
-  .leftCol {
-    background-image: url("https://bpheadlesst596.wpengine.com/wp-content/uploads/2023/04/phones-app-transparent-large.webp");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+  .imageWrapper {
+    .image {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   .content {
