--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -1,6 +1,6 @@
 .hero {
   background-color: #e5eaf4;
-  padding: 15px 0; // Changed padding for top and bottom
+  padding: 15px 0;
 
   .container {
     max-width: 1200px;
@@ -40,29 +40,24 @@
     .text {
       margin-bottom: 20px;
     }
+  }
 
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
+  .button { // Moved outside of the .buttons class
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    background-color: #34a853;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    width: 228px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    display: inline-block;
 
-      .button {
-        margin-right: 10px;
-        margin-bottom: 10px;
-        padding: 10px 20px;
-        background-color: #34a853; // Changed to the same green as the AaronBanner
-        color: #fff;
-        border: none;
-        cursor: pointer;
-        width: 228px; // Updated width
-        height: 34px; // Updated height
-        line-height: 34px; // Added to vertically center text in the button
-        text-align: center; // Added to horizontally center text in the button
-        display: inline-block; // Added to apply the width and height properties
-
-        &:hover {
-          background-color: darken(#34a853, 10%); // Darken the green color on hover
-        }
-      }
+    &:hover {
+      background-color: darken(#34a853, 10%);
     }
   }
 }
