--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -3,8 +3,12 @@
   padding: 15px 0;
 
   .container {
-    max-width: 1200px;
+    max-width: 1140px;
     margin: 0 auto;
+  }
+  .heading h1{
+    font-size:17px;
+    line-height: 1.2rem;
   }
 
   .row {
