--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -5,7 +5,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 2rem 0;
+  padding: 15px 0;
+  background-color: #e5eaf4;
 }
 
 .container {
@@ -36,14 +37,20 @@
   height: auto;
 }
 
+.heading {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
 .button {
   background-color: #4caf50;
   border: none;
   border-radius: 5px;
   color: white;
   cursor: pointer;
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  padding: 0.8rem 1.5rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
