max height and divider

--- a/styles/pages/_Home.module.scss
+++ b/styles/pages/_Home.module.scss
@@ -5,7 +5,7 @@
   background-color: #4caf50; // green color
   height: 2px; // adjust the height as needed
   width: 50px; // adjust the width as needed
-  margin: 1rem auto; // center the divider horizontally and add some margin
+  margin: 0 auto; // center the divider horizontally and add some margin
 }
 
 .home {
@@ -19,6 +19,9 @@
   text-align: center;
   margin-bottom: 1rem;
   line-height: 1.2;
+}
+h2._Home_heading__5RDQt{
+  text-align:left;
 }
 
 .description {
