--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -37,6 +37,11 @@
   height: auto;
 }
 
+.imageWrapper img {
+  max-width: 100%;
+  height: auto;
+}
+
 .heading {
   font-size: 2.5rem;
   font-weight: bold;
@@ -66,12 +71,6 @@
   margin-bottom: 1rem;
 }
 
-.heading {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
 // Updating the media query
 @media (max-width: $breakpoint-small) {
   .row {
@@ -81,5 +80,14 @@
   .hero {
     align-items: flex-start;
     justify-content: flex-start;
+  }
+
+  .imageWrapper img {
+    max-width: 90%;
+    height: auto;
+  }
+
+  .heading {
+    font-size: 2rem;
   }
 }
