--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -4,9 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 0;
+  padding: 5% 0;
   background-color: #e5eaf4;
-  max-height: 525px;
 }
 
 .container {
@@ -35,6 +34,9 @@
 .imageWrapper {
   width: 100%;
   height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageWrapper img {
@@ -54,7 +56,7 @@
   border-radius: 5px;
   color: white;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   padding: 0.8rem 1.5rem;
   text-align: center;
   text-decoration: none;
@@ -83,7 +85,7 @@
   }
 
   .imageWrapper img {
-    max-width: 90%;
+    max-width: 50%;
     height: auto;
   }
 
