--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 52px;
-    padding: 20px 1rem; // Add 10px padding on top and bottom
+    padding: 5% 0; // Add 10px padding on top and bottom
     background-color: #25a45c;
     position: sticky;
     top: 0;
