--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5% 0; // Add 10px padding on top and bottom
+    padding: 1% 0; 
     background-color: #25a45c;
     position: sticky;
     top: 0;
