--- a/components/AaronBanner/AaronBanner.module.scss
+++ b/components/AaronBanner/AaronBanner.module.scss
@@ -1,7 +1,7 @@
 .aaronBanner {
     display: flex;
     justify-content: center;
-    padding: .5% 0;
+    padding: .4% 0;
     background-color: #25a45c;
     position: sticky;
     top: 0;
@@ -11,7 +11,7 @@
 .leftColumn {
     display: flex;
     justify-content: flex-end;
-    align-content:center;
+    align-content:space-around;
     flex-basis: 50%;
     padding-top: 10px;
     color: white;
@@ -21,7 +21,8 @@
     display: flex;
     justify-content: flex-start;
     flex-basis: 50%;
-    align-content:center;
+    align-content:space-around;
+    padding-top: 10px;
 }
 
 .button {
