I THINK WE GOT THIS HERO SHIT

--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -31,12 +31,12 @@
 
       .content {
         h1 {
-          font-size: 36px;
+          font-size: 25px;
           margin-bottom: 15px;
         }
 
         .text {
-          font-size: 16px;
+          font-size: 14px;
           margin-bottom: 15px;
         }
 
@@ -46,7 +46,7 @@
           font-size: 16px;
           border: none;
           cursor: pointer;
-          background-color: #f5a623;
+          background-color: green;
           color: #ffffff;
           transition: background-color 0.3s;
         }
