changing padding from 50px to 5%

--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 50px 0;
+  padding: 5% 0;
   background-color: #e5eaf4;
 
   .container {
