it did work. Now I am adjusting the padding around the image and hopefully the vertically aligning the right column content.

--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 5% 0;
+  padding: 2% 0;
   background-color: #e5eaf4;
 
   .container {
@@ -37,7 +37,8 @@
       flex: 1;
       padding: 0 15px;
       box-sizing: border-box;
-      align-content: flex-end;
+      align-content: center;
+      align-items:center;
 
       .content {
         h1 {
