--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -38,7 +38,8 @@
       padding: 0 15px;
       box-sizing: border-box;
       align-content: center;
-      align-items:center;
+      align-items: center;
+      margin-top: -5%;
 
       .content {
         h1 {
