--- a/components/AaronHero/AaronHero.module.scss
+++ b/components/AaronHero/AaronHero.module.scss
@@ -39,7 +39,7 @@
       box-sizing: border-box;
       align-content: center;
       align-items: center;
-      margin-top: -.5%;
+      margin-top: 20px;
 
       .content {
         h1 {
