--- a/components/Posts/Posts.module.scss
+++ b/components/Posts/Posts.module.scss
@@ -34,7 +34,9 @@
 .header {
   margin-bottom: 1rem;
   padding: 0 2rem;
-  text-align:left;
+  text-align: left;
+  font-weight: bold; // Added bold style to titles
+  font-size: 1.4rem; // Increased the font size of titles
 
   a:hover,
   a:focus {
@@ -46,6 +48,8 @@
   width: 100%;
   margin: 0;
   height: auto;
+  object-fit: cover; // Added to ensure consistent aspect ratio for images
+  border-radius: 10px; // Added border-radius to featured images
 }
 
 .image-holder {
