--- a/styles/pages/_Home.module.scss
+++ b/styles/pages/_Home.module.scss
@@ -5,7 +5,7 @@
   background-color: #4caf50; // green color
   height: 10px; // adjust the height as needed
   width: 75px; // adjust the width as needed
-  margin: 0 auto; // center the divider horizontally and add some margin
+  margin-top:10px;
 }
 
 .home {
