--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,4 +1,59 @@
-.logo {
-  width: 150px;
-  height: 48px;
+@import 'styles/Variables';
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 2rem 1rem;
+  background-color: #222;
+  color: #fff;
+
+  @media (max-width: $breakpoint-medium) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
+
+.column1,
+.column2,
+.column3,
+.column4,
+.column5 {
+  flex: 1;
+  margin: 1rem;
+
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  p {
+    margin-bottom: 0.5rem;
+  }
+
+  @media (max-width: $breakpoint-small) {
+    flex-basis: 100%;
+    margin: 1rem 0;
+  }
+}
+
+.logo {
+  a {
+    display: inline-block;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
