--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -20,7 +20,7 @@
 .column4,
 .column5 {
   flex: 1;
-  margin: 1rem;
+  margin: .4rem;
 
   h2 {
     font-size: 1.5rem;
@@ -50,10 +50,25 @@
   a {
     display: inline-block;
   }
-
-  img {
-    max-width: 100%;
-    height: auto;
-  }
 }
 
+.logo-container {
+  width: 100%;
+  max-width: 359px;
+  padding-bottom: calc(239 / 359 * 100%);
+  position: relative;
+
+  .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    img {
+      max-width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+}
