--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -4,9 +4,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 2rem 1rem;
-  background-color: #222;
-  color: #fff;
+  padding: 1rem 1rem;
+  background-color: #e5eaf5;
+  color: #222;
 
   @media (max-width: $breakpoint-medium) {
     flex-direction: column;
@@ -68,7 +68,7 @@
     img {
       max-width: 100%;
       height: auto;
-      object-fit: contain;
+      object-fit: cover;
     }
   }
 }
