--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -15,6 +15,8 @@
 }
 
 .column1 {
+  flex-grow: 0;
+  flex-shrink: 1;
   flex-basis: 25%;
   margin: .4rem;
 }
@@ -23,6 +25,8 @@
 .column3,
 .column4,
 .column5 {
+  flex-grow: 0;
+  flex-shrink: 1;
   flex-basis: calc(75% / 4);
   margin: .4rem;
 }
@@ -37,7 +41,6 @@
     margin: 1rem 0;
   }
 }
-
 
 .logo {
   a {
