--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,70 +1,80 @@
-@import 'styles/Variables';
-
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 4rem 4rem;
-  background-color: #e5eaf5;
-  color: #222;
+  justify-content: space-between;
+  padding: 1rem;
+}
 
-  @media (max-width: $breakpoint-medium) {
-    flex-direction: column;
-    align-items: center;
-  }
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 1rem;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.column1,
+.column2,
+.column3,
+.column4,
+.column5 {
+  padding: 0.5rem;
 }
 
 .column1 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: 25%;
-  margin: .4rem;
+  flex: 0 0 25%;
+  max-width: 25%;
 }
 
 .column2,
 .column3,
 .column4,
 .column5 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: calc(75% / 4);
-  margin: .4rem;
+  flex: 0 0 18.75%;
+  max-width: 18.75%;
 }
 
-@media (max-width: $breakpoint-small) {
+h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 992px) {
   .column1,
   .column2,
   .column3,
   .column4,
   .column5 {
-    flex-basis: 100%;
-    margin: 1rem 0;
+    flex: 0 0 50%;
+    max-width: 50%;
   }
 }
 
-.logo {
-  a {
-    display: inline-block;
-  }
-}
-
-.logo-container {
-  width: 100%;
-  max-width: 359px;
-  padding-bottom: calc(239 / 359 * 100%);
-  position: relative;
-
-  .logo {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    img {
-      max-width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
+@media screen and (max-width: 576px) {
+  .column1,
+  .column2,
+  .column3,
+  .column4,
+  .column5 {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 }
