--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,22 +1,19 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 1rem;
 }
 
 .logo-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   padding-bottom: 1rem;
 }
 
 .logo {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .column1,
