--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -42,7 +42,7 @@
   margin-bottom: 0.5rem;
 }
 
-ul {
+.local_ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -50,7 +50,7 @@ ul {
   line-height: 1.5;
 }
 
-li {
+.local_li {
   margin-bottom: 0.5rem;
 }
 
