--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 1rem;
+  max-width:1200px;
 }
 
 .logo-container {
@@ -38,7 +39,7 @@
 }
 
 .local_h2 {
-  font-size: 1rem;
+  font-size: 5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -46,7 +47,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  font-size: 1rem;
+  font-size: 3rem;
   line-height: 1.5;
 }
 
