--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 1rem;
-  max-width:1200px;
+  width:100%;
   background-color:grey;
 }
 
