more scss changes to the footer

--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-evenly;
   padding: 1rem;
   width:100%;
-  background-color:grey;
+  background-color: #e5eaf5;
 }
 
 .logo-container {
@@ -23,7 +23,7 @@
 .column3,
 .column4,
 .column5 {
-  padding: 0.5rem;
+  padding: 2rem;
 }
 
 .column1 {
