--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,44 +1,38 @@
-
-
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 5rem;
-  width:100%;
-  background-color: #e5eaf5;
-}
-
-.logo-container {
-  display: flex;
   width: 100%;
-  padding-bottom: 1rem;
+  background-color: #e5eaf5;
+
+  .logo-container {
+    display: flex;
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+
+  .logo {
+    display: flex;
+    align-items: flex-start;
+  }
 }
 
-.logo {
-  display: flex;
-  align-items: flex-start;
-}
-
-.column1,
-.column2,
-.column3,
-.column4,
-.column5 {
+.column {
   padding: 2rem;
-}
 
-.column1 {
-  flex: 0 0 25%;
-  max-width: 25%;
-}
+  &1 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
 
-.column2,
-.column3,
-.column4,
-.column5 {
-  flex: 0 0 18.75%;
-  max-width: 18.75%;
+  &2,
+  &3,
+  &4,
+  &5 {
+    flex: 0 0 18.75%;
+    max-width: 18.75%;
+  }
 }
 
 .local_h2 {
@@ -52,10 +46,10 @@
   margin: 0;
   font-size: 1.5rem;
   line-height: 1.5;
-}
 
-.local_li {
-  margin-bottom: 0.5rem;
+  .local_li {
+    margin-bottom: 0.5rem;
+  }
 }
 
 @media screen and (max-width: 992px) {
