--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -10,30 +10,36 @@
 
   .logo-container {
     display: flex;
+    justify-content: center; /* align logo to center */
+    align-items: center; /* align logo to center */
     width: 100%;
     padding-bottom: 1rem;
   }
 
   .logo {
     display: flex;
-    align-items: flex-start;
-  }
-}
-
-.column {
-  padding: 2rem;
-
-  &1 {
-    flex: 0 0 25%;
-    max-width: 25%;
+    align-items: center; /* align logo to center */
+    img {
+      max-height: 50px; /* adjust max height of logo image */
+    }
   }
 
-  &2,
-  &3,
-  &4,
-  &5 {
-    flex: 0 0 18.75%;
-    max-width: 18.75%;
+  .column {
+    padding: 2rem;
+
+    &:nth-child(-n+4) { /* align first four columns to left */
+      align-self: flex-start;
+    }
+
+    flex: 0 0 18.75%; /* remove individual flex values from child columns */
+
+    @media screen and (max-width: $breakpoint-medium) {
+      flex: 0 0 50%;
+    }
+
+    @media screen and (max-width: $breakpoint-small) {
+      flex: 0 0 100%;
+    }
   }
 }
 
@@ -51,27 +57,5 @@
 
   .local_li {
     margin-bottom: 0.5rem;
-  }
-}
-
-@media screen and (max-width: $breakpoint-medium) {
-  .column1,
-  .column2,
-  .column3,
-  .column4,
-  .column5 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-}
-
-@media screen and (max-width: $breakpoint-small) {
-  .column1,
-  .column2,
-  .column3,
-  .column4,
-  .column5 {
-    flex: 0 0 100%;
-    max-width: 100%;
   }
 }
