--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,28 +1,34 @@
 // Import variables
 @import "styles/_Variables.scss";
 
-// Set the container width
+// Set the container width and center the content
 .container {
   width: 100%;
-  // Add some spacing around the elements in the footer
+  margin: 0 auto;
   padding: 2rem;
-  // Style the logo
-  .logo {
-    max-height: 50px;
-  }
 }
 
-// Set the column widths
-.column1, .column2, .column3, .column4, .column5 {
-  flex: 20%;
+// Set the column widths and add some spacing between them
+.column {
+  flex-basis: 20%;
+  margin-right: 1rem;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 // Make the columns responsive
-@media (max-width: $breakpoint-medium) {
-  .column1, .column2, .column3, .column4, .column5 {
-    flex: 100%;
-    flex-direction: column;
+@media (max-width: 768px) {
+  .column {
+    flex-basis: 100%;
+    margin-right: 0;
+    margin-bottom: 1rem;
   }
+}
+
+// Style the logo
+.logo {
+  max-height: 50px;
 }
 
 // Style the h2 elements
