--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -10,18 +10,23 @@
 }
 .column1{
   flex-basis:20%;
+  justify-content: center;
 }
 .column2{
   flex-basis:20%;
+  justify-content: center;
 }
 .column3{
   flex-basis:20%;
+  justify-content: center;
 }
 .column4{
   flex-basis:20%;
+  justify-content: center;
 }
 .column5{
   flex-basis:20%;
+  justify-content: center;
 }
 
 .local_h2{
