--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -3,12 +3,10 @@
 
 // Set the container width and center the content
 .container {
-  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 5rem;
-  background-color: gray;
-  display: flex;
-  flex-wrap: wrap;
+  padding: 0 15px;
+  background-color:#e5eaf5;
 }
 
 .column {
@@ -17,11 +15,11 @@
   gap: 2rem;
 
   @media (min-width: $breakpoint-small) {
-    flex-basis: 50%;
+    flex-basis: 100%;
   }
 
   @media (min-width: $breakpoint-medium) {
-    flex-basis: 20%;
+    flex-basis: 100%;
   }
 }
 
