--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -6,20 +6,26 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
-  background-color:#e5eaf5;
+  background-color: #e5eaf5;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .column {
   flex-basis: 100%;
   padding: 3rem 0;
-  gap: 2rem;
 
   @media (min-width: $breakpoint-small) {
-    flex-basis: 100%;
+    flex-basis: 50%;
   }
 
   @media (min-width: $breakpoint-medium) {
-    flex-basis: 100%;
+    flex-basis: 25%;
   }
 }
 
