--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -77,7 +77,6 @@
     }
   }
 }
-
 @media (min-width: 1024px) {
   .AaronFooter {
     .footer {
@@ -85,10 +84,7 @@
         flex-direction: row;
       }
 
-      .column1 {
-        flex: 1;
-      }
-
+      .column1,
       .column2,
       .column3,
       .column4,
@@ -98,3 +94,4 @@
     }
   }
 }
+
