--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -3,12 +3,12 @@
 
 .AaronFooter {
   .footer {
-    background-color: #e5eaf5;
-    color: #333;
-    padding: 40px 0;
+    background-color: #333;
+    color: #fff;
+    padding: 40px;
 
     a {
-      color: inherit;
+      color: #fff;
       text-decoration: none;
     }
 
@@ -16,9 +16,9 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      max-width: 1200px;
+      max-width: $container-max-width;
       margin: 0 auto;
-      padding: 0 20px;
+      padding: 0 40px;
     }
 
     .row {
@@ -44,7 +44,7 @@
     }
 
     .local_h2 {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
     .local_ul {
@@ -58,7 +58,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $breakpoint-small) {
   .AaronFooter {
     .footer {
       .row {
@@ -77,7 +77,8 @@
     }
   }
 }
-@media (min-width: 1024px) {
+
+@media (min-width: $breakpoint-medium) {
   .AaronFooter {
     .footer {
       .row {
@@ -94,4 +95,3 @@
     }
   }
 }
-
