--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -2,95 +2,10 @@
 @import "styles/_Variables.scss";
 
 
-  .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 40px;
+.footerContainer {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
 
-    a {
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      max-width: $container-max-width;
-      margin: 0 auto;
-      padding: 0 40px;
-    }
-
-    .row {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .column1,
-    .column2,
-    .column3,
-    .column4,
-    .column5 {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      margin-bottom: 40px;
-    }
-
-    .logocontainer {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-
-    .local_h2 {
-      margin-bottom: 20px;
-    }
-
-    .local_ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-
-    .local_li {
-      margin-bottom: 10px;
-    }
-  }
-
-
-@media (min-width: $breakpoint-small) {
-
-    .footer {
-      .row {
-        flex-direction: row;
-        flex-wrap: wrap;
-      }
-
-      .column1,
-      .column2,
-      .column3,
-      .column4,
-      .column5 {
-        width: calc(100% / 2);
-        padding-right: 20px;
-      }
-    }
-  }
-
-
-@media (min-width: $breakpoint-medium) {
-    .footer {
-      .row {
-        flex-direction: row;
-      }
-
-      .column1,
-      .column2,
-      .column3,
-      .column4,
-      .column5 {
-        flex: 1;
-      }
-    }
-  }
 
